--- a/css/shared/variables.css
+++ b/css/shared/variables.css
@@ -10,19 +10,23 @@
 	--clusterSaum: #f3f3f3;
 	--clusterZentrum: #e6e6e6;
 	--colorBlue: #002bff;
+	--colorBlueDark: #0000a9;
 	--colorBlueLight: #31C0FF;
 	--colorCyan: #1580ab;
 	--colorGreen: #080;
 	--colorRed: #d00;
 	--colorYellow: #f7d500;
 	--bgBlue: #0000a9;
+	--bgBlueLight: #002bff;
 	--bgGrey: #b6b6b6;
 	--bgGreyDark: #212529;
 	--bgGreyLight: #f3f3f3;
 	--bgHover: #e1eaed;
 	--bgSelection: #000098;
+	--gradient: linear-gradient(90deg, var(--bgBlue) 40%, var(--bgBlueLight) 90%);
 	--line: #ccc;
-	--outline: #002bff;
+	--outline: #31C0FF;
+	--selection: #0000a9;
 
 	/* root font size */
 	font-size: 20px;
