--- a/css/shared/overlay.css
+++ b/css/shared/overlay.css
@@ -71,6 +71,62 @@
 }
 
 
+/* PREFERENCES ---------------------------------- */
+
+#prefs > div {
+	min-width: 600px;
+}
+
+#prefs > div > div {
+	display: grid;
+	grid-template-columns: 150px 1fr;
+	column-gap: 20px;
+}
+
+#prefs ul {
+	margin: 0 0 0 -1px;
+	padding: 0;
+	list-style-type: none;
+}
+
+#prefs li {
+	margin: 10px 0;
+}
+
+#prefs li a {
+	display: block;
+	padding: 0 10px;
+	background-color: var(--bgBlue);
+	color: #fff;
+	font-size: 1rem;
+	text-decoration: none;
+}
+
+#prefs li a.active {
+	background-color: var(--bgHighlight);
+}
+
+#prefs p {
+	font-size: .8rem;
+	line-height: 1.2rem;
+}
+
+.prefs-section {
+	margin: 10px 10px 10px 0;
+}
+
+.prefs-git {
+	padding-left: 115px;
+	text-indent: -115px;
+}
+
+.prefs-git i {
+	display: inline-block;
+	width: 115px;
+	text-indent: 0;
+}
+
+
 /* DIALOG --------------------------------------- */
 
 #dialog.overlay > div {
