--- a/css/shared/overlay.css
+++ b/css/shared/overlay.css
@@ -26,7 +26,8 @@
 	border-left: 1px solid var(--line);
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
-	min-width: 500px;
+	width: 450px;
+	max-width: 90%;
 	background-color: #fff;
 }
 
@@ -49,81 +50,6 @@
 	right: 10px;
 	width: 30px;
 	height: 30px;
-}
-
-
-/* GIT CONFIGURATION ---------------------------- */
-
-#git p {
-	white-space: nowrap;
-}
-
-#git label {
-	width: 130px;
-}
-
-#git input[type="text"] {
-	width: 350px;
-}
-
-#git .icon {
-	margin-left: 10px;
-}
-
-
-/* PREFERENCES ---------------------------------- */
-
-#prefs > div {
-	min-width: 600px;
-}
-
-#prefs > div > div {
-	display: grid;
-	grid-template-columns: 150px 1fr;
-	column-gap: 20px;
-}
-
-#prefs ul {
-	margin: 0 0 0 -1px;
-	padding: 0;
-	list-style-type: none;
-}
-
-#prefs li {
-	margin: 10px 0;
-}
-
-#prefs li a {
-	display: block;
-	padding: 0 10px;
-	background-color: var(--bgBlue);
-	color: #fff;
-	font-size: 1rem;
-	text-decoration: none;
-}
-
-#prefs li a.active {
-	background-color: var(--bgHighlight);
-}
-
-#prefs p {
-	font-size: .8rem;
-	line-height: 1.2rem;
-}
-
-.prefs-section {
-	margin: 10px 10px 10px 0;
-}
-
-.prefs-git {
-	padding-left: 115px;
-	text-indent: -115px;
-}
-
-.prefs-git i {
-	display: inline-block;
-	width: 115px;
-	text-indent: 0;
 }
 
 
