--- a/css/shared/variables.css
+++ b/css/shared/variables.css
@@ -21,7 +21,7 @@
 	--bgBlueLight: #002bff;
 	--bgGrey: #b6b6b6;
 	--bgGreyDark: #212529;
-	--bgGreyLight: #f3f3f3;
+	--bgGreyLight: #f6f6f6;
 	--bgHighlight: #31C0FF;
 	--bgHover: #e1eaed;
 	--bgSelection: #000098;
@@ -36,3 +36,18 @@
 	/* root font size */
 	font-size: 20px;
 }
+
+/* FONT SIZES -----------------------------------
+	XL
+		font-size: 1rem
+		line-height: 1.5rem;
+	L
+		font-size: .9rem
+		line-height: 1.35rem
+	M
+		font-size: .8rem
+		line-height: 1.2rem
+	S
+		font-size: .75rem
+		line-height: 1rem
+*/
