--- a/css/app/overlay.css
+++ b/css/app/overlay.css
@@ -58,7 +58,12 @@
 	background-color: var(--bgHighlight);
 }
 
+#prefs h2 {
+	margin: 20px 0 10px 0;
+}
+
 #prefs p {
+	margin: 10px 0;
 	font-size: .8rem;
 	line-height: 1.2rem;
 }
