--- a/css/shared/variables.css
+++ b/css/shared/variables.css
@@ -3,6 +3,7 @@
 :root {
 	/* colors */
 	--text: #212529;
+	--textColor: #0000a9;
 	--textGrey: #6c757d;
 	--textGreyLight: #b6b6b6;
 	--textLink: #002bff;
