--- a/css/app/app.css
+++ b/css/app/app.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+body.scrollable {
+	overflow-y: scroll;
+}
+
+
 /* HEADER --------------------------------------- */
 
 header {
