--- a/css/shared/variables.css
+++ b/css/shared/variables.css
@@ -18,6 +18,7 @@
 	--colorGreen: #080;
 	--colorRed: #d00;
 	--colorYellow: #f7d500;
+	--bgActive: #e1eaed;
 	--bgBlue: #0000a9;
 	--bgBlueLight: #002bff;
 	--bgGrey: #b6b6b6;
