--- a/css/app/app.css
+++ b/css/app/app.css
@@ -164,24 +164,29 @@ section {
 }
 
 
-/* SORTING AND QUICK FILTER --------------------- */
+/* SORTING AND SEARCH FORM ---------------------- */
 
-#sorting {
+#sorting,
+#search-form {
 	position: fixed;
 	top: 111px;
 	left: 0;
+	z-index: 1;
 	width: 100%;
 	height: 60px;
 	background-color: #fff;
 }
 
-#sorting > div {
+#sorting > div,
+#search-form > div {
 	margin: 0 auto;
 	padding: 10px 0;
+	height: 40px;
 	width: max-content;
+	white-space: nowrap;
 }
 
-#sorting a {
+#sorting a.icon {
 	margin-left: 15px;
 	padding: 5px;
 }
@@ -195,23 +200,85 @@ section {
 	position: relative;
 	top: 5px;
 	vertical-align: top;
-	margin-left: 105px;
+	margin-left: 100px;
+	padding-right: 34px;
 	width: 200px;
+}
+
+.clear-text-field,
+#search-help {
+	position: relative;
+	top: 8px;
+	display: inline-block;
+	margin-left: -30px;
+	border-radius: 5px;
+	width: 24px;
+	height: 24px;
+}
+
+.clear-text-field:focus,
+#search-help:focus {
+	outline: 2px solid var(--outline);
+	outline-offset: -2px;
+}
+
+#search-form .clear-text-field {
+	margin-left: -59px;
+}
+
+#search-help {
+	margin-left: 5px;
+}
+
+#search-form input[type="text"] {
+	position: relative;
+	top: 2px;
+	padding-right: 63px;
+	width: 400px;
+}
+
+#search-form input[type="button"] {
+	position: relative;
+	top: 3px;
+	margin-left: 21px;
 }
 
 
 /* MISCELLANEOUS -------------------------------- */
 
-#nothing {
+.nothing {
 	text-align: center;
 }
 
-#nothing p:first-child {
+.nothing p:first-child {
 	color: var(--colorRed);
 	font-weight: bold;
 }
 
-#nothing p:last-child {
+.nothing p:last-child {
 	font-size: .8rem;
 	line-height: 1.2rem;
+}
+
+.wait {
+	text-align: center;
+}
+
+.xml-tag {
+	color: var(--colorBlueDark);
+}
+
+.xml-attr-key {
+	color: var(--colorGreen);
+}
+
+.xml-attr-val {
+	color: var(--colorRed);
+}
+
+.xml-comment,
+.xml-comment .xml-tag,
+.xml-comment .xml-attr-key,
+.xml-comment .xml-attr-val {
+	color: var(--textGrey);
 }
