--- a/css/shared/form.css
+++ b/css/shared/form.css
@@ -44,6 +44,10 @@ input[type="button"][value="Nein"] {
 	background-image: url(../../img/app/button-no.svg);
 }
 
+input[type="button"][value="Suchen"] {
+	background-image: url(../../img/app/search.svg);
+}
+
 input[type="button"][value="Zurücksetzen"] {
 	background-image: url(../../img/app/cleanup.svg);
 }
@@ -70,4 +74,41 @@ label {
 label + input[type="text"],
 input[type="text"] + label {
 	margin-left: 10px;
+}
+
+input[type="checkbox"] {
+	position: relative;
+	top: 1px;
+	display: inline-block;
+	vertical-align: top;
+	margin: 0 10px 0 0;
+	box-sizing: content-box;
+	border: 1px solid var(--line);
+	border-radius: 5px;
+	width: 20px;
+	height: 20px;
+	appearance: none;
+	background-color: #fff;
+}
+
+input[type="checkbox"]::before {
+	content: " ";
+	position: absolute;
+	top: 3px;
+	left: 3px;
+	display: none;
+	border-radius: 5px;
+	width: 14px;
+	height: 14px;
+	background-color: var(--bgBlue);
+}
+
+input[type="checkbox"]:checked::before {
+	display: block;
+}
+
+input[type="checkbox"]:focus {
+	outline: 1px solid var(--outline);
+	outline-offset: 0;
+	border-color: var(--outline);
 }
